--- a/styles/site.css
+++ b/styles/site.css
@@ -20,6 +20,38 @@ body {
   margin:30px;
 }
 
+/* Go-to-top Button */
+#btnTop {
+  display: none;
+  position: fixed;
+  bottom: 90px;
+  right: 250px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  background-color: rgba(147, 158, 175, 0.4);
+  color: white;
+  cursor: pointer;
+  padding: 5px 15px 8px 15px;
+  border-radius: 100px;
+}
+
+#btnTop:hover {
+  background-color: rgba(147, 158, 175, 1);
+}
+
+.fa-angle-up {
+  font-size: 3em;
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+  #btnTop {
+    bottom: 40px;
+    right: 40px;
+  }
+}
+/* End of Go-to-top Button */
+
 /* Top Section */
 header {
   background-image: url("../images/belgrade-background.jpg");
@@ -30,7 +62,7 @@ header {
   height: 100%;
 }
 
-header > h1 {
+header h1 {
   font-size: 5em;
 }
 
