Removed unnecessary row tag and html/body width

--- a/styles/site.css
+++ b/styles/site.css
@@ -1,15 +1,11 @@
 html {
-  overflow-y: scroll; /* prevents content pages with less content from shifting the page */
-  overflow-x: hidden; /* disables horizontal scroll on mobile */
-  max-width: 100%;
+  overflow-y: visible; /* prevents content pages with less content from shifting the page */
   position: relative;
   min-height: 100%;
 }
 
 body {
   margin: 0 0 100px; /* height of the sticky footer */
-  overflow-x: hidden;
-  max-width: 100%;
   font-family: 'Sanchez', serif;
 }
 
